# chess-ai

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  README.md  pyproject.toml
data/pipeline/: convert_sf15_to_binary.py  generate_alignment_board_description.py  generate_board_reading_sft.py  generate_encoder_pretrain_sf15.py  generate_grpo_joint_prompts.py  generate_grpo_phase1.py  generate_grpo_phase1_board_reading.py  generate_grpo_prompts.py  generate_mate_comments.py  generate_mate_sft.py  generate_phase2_comments.py  generate_phase2_data.py  generate_puzzle_grpo.py  generate_puzzle_sft_coldstart.py  generate_textbook_pretrain.py  parse_pgn_study.py  parse_textbook_pgn.py  prepare_datasets.py  sf15_eval.py
recipes-inference/llm-judge/: start.sh  stop.sh
recipes-inference/qwen3.5-35b-a3b-fp8/: docker-compose.yml
recipes-inference/qwen3.5-4b-thinking-lora/: docker-compose.yml  start.sh  stop.sh
recipes-train/encoder-clip/: config.yaml  experiments.md  probe.sh  probe_checkpoint.py  start.sh  stop.sh  train.py
recipes-train/encoder-phase0/: config.yaml  probe.sh  probe_checkpoint.py  start.sh  stop.sh  train.py
recipes-train/encoder-pretrain/: config.yaml  train.py
recipes-train/qwen3-4b-encoder-phase1-sft/: serve.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase0-alignment/: config.yaml  eval_samples.py  start.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase1-alignment/: config-easy.yaml  config-medium.yaml  config.yaml  eval_samples.py  start.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase1-sft/: config.yaml  serve.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase1b-sft-coldstart/: config.yaml  start.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase2-grpo/: config.yaml  start.sh  train.py
recipes-train/qwen3.5-4b-encoder-phase2-puzzle-grpo/: config.yaml  start.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-encoder-pretrain-textbook/: config.yaml  eval.py  stop.sh  train.py
recipes-train/qwen3.5-4b-grpo-phase1/: config.yaml  start.sh  stop.sh  train.py
recipes-train/qwen3.5-4b-grpo-phase2/: config.yaml  (+1 more)
scripts/: benchmark_mate1.py  eval_alignment.py  eval_chessqa.py  eval_chessqa_sglang.py  extract_alignment_checkpoint.py  training_monitor.py  view_grpo_log.py
sglang/: client_example.py  merge_adapter.py  serve.sh
static/: app.js  index.html  style.css
tests/: test_encoder.py  test_puzzle_rewards.py  test_rewards.py  test_stockfish.py
training/: SFT_SUMMARY.md  TODO_ENCODER.md  TODO_RL.md  encoder_collator.py  encoder_model.py  lib.py
(+40 files in other folders)
