[project]
name = "chess-ai-tutor"
version = "0.1.0"
description = "Pedagogical chess analysis system with Stockfish + fine-tuned LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zheng"}
]

dependencies = [
    "python-chess>=1.10",
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cairosvg>=2.7",
    "pillow>=10.0",
    "click>=8.1",
    "rich>=13.0",
    "openai>=2.15.0",
    "fastapi[standard]>=0.115",
    "datasets>=2.18",
    "jmespath>=1.0",
    "flash-linear-attention[training]>=0.4.2",
]

[project.optional-dependencies]
# Training deps — install with: uv sync --extra training
# torch+cu130 and torchvision come from the PyTorch index (see [tool.uv.sources] below)
#
# After uv sync, build CUDA extensions from source (one-time, sm_120 only):
#   TORCH_CUDA_ARCH_LIST="12.0" MAX_JOBS=6 uv pip install flash-attn causal-conv1d --no-build-isolation --no-cache
# These are NOT listed here because uv sync installs pre-built wheels with wrong ABI.
training = [
    "torch==2.11.0",
    "torchvision",
    "transformers>=4.51.3",
    "huggingface_hub>=1.3.0",
    "datasets>=2.18",
    "accelerate>=0.30",
    "bitsandbytes>=0.45.5",
    "peft>=0.10",
    "trl>=0.29.1",
    "liger-kernel @ git+https://github.com/linkedin/Liger-Kernel.git",
    "kernels",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvshmem-cu12",
    "jmespath>=1.0",
    "wandb",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
chess-mcp = "chess_mcp.server:main"
chess-tutor = "tutor.cli:main"
chess-review = "tutor.review:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chess_mcp", "src/verification", "src/tutor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
